# project-swarm-repo

./: .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml  sample_playbook.json
src/: agent.py  call_results.py  playbook.py  prompt_builder.py
tests/: test_call_results.py  test_end_call_validation.py  test_playbook.py
